<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ebony_clay"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".presentation.authentication.ui.register.EnterDobFragment">

    <ImageView
        android:id="@+id/up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/dob_frag_heading"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_btn" />


    <TextView
        android:id="@+id/dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dob"
        android:textColor="@color/mithril_silver"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_corner_bg"
        android:importantForAutofill="no"
        android:theme="@style/CustomEditText"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        tools:text="11/09/2023"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_corner_bg"
        android:backgroundTint="@color/blue_heath_butterfly"
        android:enabled="false"
        android:foreground="?android:selectableItemBackground"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/password_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/agree_t_and_c"
        android:textColor="@color/mithril_silver"
        android:textSize="11sp" />
</LinearLayout>