<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ebony_clay"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".presentation.authentication.ui.login.LoginFragment">

    <ImageView
        android:id="@+id/up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login_heading"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/up_btn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/login_description"
        android:textColor="@color/mithril_silver" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account_information"
        android:textColor="@color/mithril_silver"
        android:textStyle="bold" />

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/edit_text_motion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded_corner_bg"
        android:backgroundTint="@color/lead"
        app:layoutDescription="@xml/phone_to_email_edit_text_scene"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text">

        <TextView
            android:id="@+id/country_code_text_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/contact_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/contact_container"
            tools:text="in +91" />

        <View
            android:id="@+id/vertical_divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/ebony_clay"
            app:layout_constraintBottom_toBottomOf="@id/contact_container"
            app:layout_constraintStart_toEndOf="@id/country_code_text_view"
            app:layout_constraintTop_toTopOf="@id/contact_container" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="@color/lead"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/vertical_divider"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contact_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_corner_bg"
                android:hint="@string/acc_info_hint"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_bg"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password_reset"
        android:textColor="@color/blue_heath_butterfly"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/use_pw_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/password_manager"
        android:textColor="@color/blue_heath_butterfly"
        android:textSize="11sp"
        android:textStyle="bold" />
    <FrameLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:background="@drawable/rounded_corner_bg"
            android:backgroundTint="@color/blue_heath_butterfly"
            android:enabled="false"
            android:elevation="0dp"
            android:foreground="?android:selectableItemBackground"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:elevation="3dp"
            android:visibility="visible"
            android:indeterminateTint="@color/white"/>
    </FrameLayout>

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/musk_memory"
        android:textSize="13sp"
        tools:text="Oop! You;ve caught an ultra rare error. This is probably our fault, so please try again or check our status page." />

</LinearLayout>

